--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,28 @@ body
     margin: 0;
     padding: 0;
 }
+
+#cabecera
+{
+    background: gray;
+    box-shadow: 0px 2px 20px 0px rgb(0, 0, 0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+#cabecera #tagline
+{
+    color: black;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 0.6em;
+    padding: 0 0 0 1em;
+}
+
 #container
 {
     width: 70%;
