--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,9 @@
 body
 {
+    background: black;
     text-align: center;
     font-family: Helvetica;
-    color: rgb(146, 6, 6);
+    color: rgb(68, 68, 68);
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -10,19 +11,24 @@ body
 
 #cabecera
 {
-    background: gray;
+    background: rgb(0, 0, 0);
     box-shadow: 0px 2px 20px 0px rgb(0, 0, 0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
     font-size: 1.5em;
-    text-align: center;
+}
+
+#cabecera #logo
+{
+    width: 80px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
 {
-    color: black;
+    color: rgb(255, 255, 255);
 
     font-weight: normal;
     font-size: 0.6em;
@@ -41,4 +47,10 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
