--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     text-align: center;
     font-family: Helvetica;
-    color: rgb(146, 6, 6);
+    color: black;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -41,4 +41,11 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#footer
+{
+    background: gray;
+    text-align: center;
+    padding: 0.5em;
+    color: white;
 }
