--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,7 +44,7 @@ body
 }
 #footer
 {
-    background: gray;
+    background: rgb(14, 83, 12);
     text-align: center;
     padding: 0.5em;
     color: white;
