--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,8 +37,8 @@ body
 
 #container
 {
-    width: 70%;
-    padding: 1em;
+    width: 50%;
+    padding: 0.03em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -51,12 +51,13 @@ body
 
 #post
 {
-   background-color: aqua;
+   background-color: rgb(255, 255, 255);
 
 }
 #footer
 {
     background: white;
     padding: 1em;
+    text-align: center;
 }
 
