--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,12 +52,17 @@ body
 #post
 {
    background-color: rgb(255, 255, 255);
-
+   font-style: italic;
 }
 #footer
 {
     background: rgb(227, 224, 224);
     padding: 1em;
     text-align: center;
+}
+
+#title
+{
+    font-style: normal;
 }
 
